Update portfolio website with latest design and content

--- a/content/projects.html
+++ b/content/projects.html
@@ -1,5 +1,6 @@
 <main class="projects-content">
     <h1>My Projects</h1>
+    <div class="animated-underline"></div> </br>
     <p class="projects-intro">Welcome to my portfolio of innovative work! Here you'll find a collection of projects that demonstrate my expertise in web development, automation, and cloud solutions. Each project reflects my commitment to creating elegant, functional applications that solve real business problems.</p>
     
     <div class="projects-grid">
