--- a/content/services.html
+++ b/content/services.html
@@ -10,7 +10,6 @@
         <h1>My Services</h1>
         <div class="animated-underline"></div>
     </div>
-    
     <p class="services-intro">I offer a range of professional services tailored to meet your digital and technical needs. Each service combines my technical expertise with creative problem-solving to deliver high-quality results.</p>
     
     <!-- Service Categories Navigation -->
@@ -47,7 +46,7 @@
             </div>
             <div class="service-details">
                 <div class="service-badge">Specialized</div>
-                <h3>Full Stack Development</h3>
+                <h3>Full Stack </br> Development</h3>
                 <p>Developing comprehensive web applications with both frontend and backend expertise, creating seamless, dynamic, and functional digital solutions.</p>
                 <ul class="service-features">
                     <li>Frontend development (HTML, CSS, JavaScript)</li>
